Update gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
 background-image.png
+background-image-arctic.png
+background-image-antarctic.png
 osisaf-test.png
-osisaf-average.png 
+osisaf-antarctic-test.png
+osisaf-average.png
+osisaf-average-image.png
 .env
 osisaf-fram.py
 images/
+osisaf-fram-daily.png
+osisaf-fram-daily.csv
+osisaf-fram-fjl-daily.png
+osisaf-fram-fjl-daily.csv
+osisaf-average-last-10-days.png
+osisaf-average-last-10-days.png
+osisaf-antarctic-average-last-10-days.png
+osisaf-antarctic-average-last-30-days.png
