--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ osisaf-average.png
 osisaf-average-image.png
 .env
 images/
+data/lr/
 osisaf-fram-daily.png
 osisaf-fram-daily.csv
 osisaf-fram-fjl-daily.png
