--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Run Python Script Daily
 on:
   schedule:
     # Run at 5:00 a.m. UTC every day
-    - cron: '55 19 * * *'
+    - cron: '35 20 * * *'
 
 jobs:
   run-script:
@@ -32,18 +32,13 @@ jobs:
     - name: Run Python script
       run: python osisaf-fram.py
 
-    - name: Set up Git
-      run: |
-        git config user.name "GitHub Actions Bot"
-        git config user.email "actions@github.com"
-
-    - name: Commit changes
-      run: |
-        git add .
-        git commit -m "Automated commit: $(date -u +'%Y-%m-%d %H:%M:%S')"
-
-    - name: Push changes
+    - name: Git commit changes
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        git config user.name "GitHub Actions Bot"
+        git config user.email "actions@github.com"
+        git remote set-url --push origin https://StevenDelvaux:$GITHUB_TOKEN@github.com/osisaf.git
+        git add .
+        git commit -m "Automated commit: $(date -u +'%Y-%m-%d %H:%M:%S')"
         git push
