--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,9 @@ name: Run Python Script Daily
 on:
   schedule:
     # Run at 5:00 a.m. UTC every day
-    - cron: '55 20 * * *'
+    - cron: '20 21 * * *'
+permissions:
+  contents: write
 
 jobs:
   run-script:
