Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@ osisaf-fram-daily.png
 osisaf-fram-daily.csv
 osisaf-fram-fjl-daily.png
 osisaf-fram-fjl-daily.csv
+osisaf-average.png
 osisaf-average-last-10-days.png
 osisaf-average-last-10-days.png
+osisaf-antarctic-average.png
 osisaf-antarctic-average-last-10-days.png
 osisaf-antarctic-average-last-30-days.png
